--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "emotion": "^9.1.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
+    "react-emotion": "^9.1.0",
+    "react-player": "^1.3.1",
     "react-scripts": "1.1.3"
   },
   "scripts": {
