--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "react-dom": "^16.3.0",
     "react-emotion": "^9.1.0",
     "react-player": "^1.3.1",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.3"
   },
   "scripts": {
